--- a/countdown-ctb/cdctb.css
+++ b/countdown-ctb/cdctb.css
@@ -1,12 +1,12 @@
 body{
 	text-align: center;
-	background: #00ECB9;
+	background: rgb(11, 210, 224);
   font-family: Consolas;
   font-weight: 100;
 }
 
 h1{
-  color: #396;
+  color: #e91111;
   font-weight: 100;
   font-size: 35px;
   margin: 40px 0px 20px;
@@ -24,14 +24,14 @@ h1{
 #clockdiv > div{
 	padding: 10px;
 	border-radius: 2px;
-	background: #00BF96;
+	background: #5a97df;
 	display: inline-block;
 }
 
 #clockdiv div > span{
 	padding: 15px;
 	border-radius: 3px;
-	background: #00816A;
+	background: rgb(38, 0, 173);
 	display: inline-block;
 }
 
