--- a/countdown-ctb/cdctb.css
+++ b/countdown-ctb/cdctb.css
@@ -26,6 +26,7 @@ h1{
 	font-weight: 100;
 	text-align: center;
 	font-size: 70px;
+	opacity: 1;
 }
 
 #clockdiv > div{
@@ -33,6 +34,7 @@ h1{
 	border-radius: 2px;
 	background: #5a97df;
 	display: inline-block;
+	opacity: 0.84;
 }
 
 #clockdiv div > span{
@@ -40,6 +42,7 @@ h1{
 	border-radius: 3px;
 	background: #2600ad;
 	display: inline-block;
+	opacity: 1;
 }
 
 #nplaying{
