--- a/countdown-ctb/cdctb.css
+++ b/countdown-ctb/cdctb.css
@@ -5,8 +5,7 @@
 
 body{
 	background-image: url("img/ctb.jpg");
-	width: 100%;
-    height: auto;
+	background-size: cover;
 	text-align: center;
 	font-family: Consolas;
 	font-weight: 100;
