--- a/countdown-ctb/cdctb.css
+++ b/countdown-ctb/cdctb.css
@@ -5,6 +5,8 @@
 
 body{
 	background-image: url("img/ctb.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
 	background-size: cover;
 	text-align: center;
 	font-family: Consolas;
