--- a/countdown-ctb/cdctb.css
+++ b/countdown-ctb/cdctb.css
@@ -1,11 +1,11 @@
 @font-face {
 	font-family: "Montserrat";
-	src: url("../fonts/Montserrat-Regular.ttf");
+	src: url("fonts/Montserrat-Regular.ttf");
 }
 
 
 body{
-	background-image: url("../img/ctb.jpg");
+	background-image: url("img/ctb.jpg");
 	height: 100%; 
 	background-position: center;
 	background-repeat: no-repeat;
